--- a/Sección 8 Módulos y Webpack/webpack-inicial/package.json
+++ b/Sección 8 Módulos y Webpack/webpack-inicial/package.json
@@ -14,6 +14,8 @@
         "css-loader": "^3.4.2",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
         "style-loader": "^1.1.3",
         "webpack": "^4.41.6",
         "webpack-cli": "^3.3.11",
